[gd_scene load_steps=16 format=3 uid="uid://d2kf23u1bayud"]

[ext_resource type="Script" path="res://scripts/InGameUI.gd" id="1_u7f4a"]
[ext_resource type="Script" path="res://scripts/TutoPanel.gd" id="1_yvkub"]
[ext_resource type="PackedScene" uid="uid://khk0epal4mdb" path="res://_scenes/ui/general_controls.tscn" id="2_kmyoa"]
[ext_resource type="Script" path="res://scripts/LevelSummary.gd" id="2_nq8yg"]
[ext_resource type="AudioStream" uid="uid://cqks73xmvndr6" path="res://resources/SoundEffects/bip.mp3" id="3_d80sy"]
[ext_resource type="Texture2D" uid="uid://dvqxlryjq8y1g" path="res://models/ui_icons.png" id="3_fq77u"]
[ext_resource type="AudioStream" uid="uid://be2wftvlet4op" path="res://resources/SoundEffects/click.mp3" id="4_6uoe2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_f00s4"]
atlas = ExtResource("3_fq77u")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wcu5s"]
atlas = ExtResource("3_fq77u")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5w66"]
atlas = ExtResource("3_fq77u")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntkxg"]
atlas = ExtResource("3_fq77u")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aru18"]
atlas = ExtResource("3_fq77u")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cmkyc"]
atlas = ExtResource("3_fq77u")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8lvxu"]
atlas = ExtResource("3_fq77u")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6p06c"]
atlas = ExtResource("3_fq77u")
region = Rect2(64, 32, 32, 32)

[node name="InGameUI" type="Control" node_paths=PackedStringArray("arrivedMeepleScore", "goneMeepleScore", "summaryArrivedMeepleScore", "summaryGoneMeepleScore", "summaryTitle", "summaryButton", "levelSummary", "tutoPanel", "bip_sound")]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_u7f4a")
arrivedMeepleScore = NodePath("MarginContainer/VBoxContainer/ArrivedMeepleScore/Label")
goneMeepleScore = NodePath("MarginContainer/VBoxContainer/GoneMeepleScore/Label")
summaryArrivedMeepleScore = NodePath("LevelSummary/MarginContainer2/VBoxContainer/VBoxContainer2/ArrivedMeepleScore/Label")
summaryGoneMeepleScore = NodePath("LevelSummary/MarginContainer2/VBoxContainer/VBoxContainer2/GoneMeepleScore/Label")
summaryTitle = NodePath("LevelSummary/MarginContainer2/VBoxContainer/Label")
summaryButton = NodePath("LevelSummary/MarginContainer2/VBoxContainer/VBoxContainer/Continue")
levelSummary = NodePath("LevelSummary")
tutoPanel = NodePath("TutoPanel")
bip_sound = NodePath("Bip")

[node name="GeneralControls" parent="." instance=ExtResource("2_kmyoa")]
layout_mode = 0
offset_left = 0.0
offset_right = 110.0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2

[node name="ArrivedMeepleScore" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ArrivedMeepleScore"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
text = "X/X"

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/ArrivedMeepleScore"]
visibility_layer = 0
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/ArrivedMeepleScore"]
layout_mode = 2
texture = SubResource("AtlasTexture_f00s4")

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
visibility_layer = 0
layout_mode = 2
size_flags_vertical = 3

[node name="GoneMeepleScore" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GoneMeepleScore"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
text = "X/X"

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/GoneMeepleScore"]
visibility_layer = 0
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/GoneMeepleScore"]
layout_mode = 2
texture = SubResource("AtlasTexture_wcu5s")

[node name="TutoPanel" type="Panel" parent="." node_paths=PackedStringArray("previousButton", "nextButton", "quitButton", "tutoPage_0", "tutoPage_1", "tutoPage_2", "clickSound")]
visible = false
custom_minimum_size = Vector2(400, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yvkub")
previousButton = NodePath("MarginContainer2/VBoxContainer/HBoxContainer/Previous")
nextButton = NodePath("MarginContainer2/VBoxContainer/HBoxContainer/Next")
quitButton = NodePath("MarginContainer2/VBoxContainer/HBoxContainer2/ExitTuto")
tutoPage_0 = NodePath("MarginContainer2/VBoxContainer/HBoxContainer/PanelContainer/TutoPage0")
tutoPage_1 = NodePath("MarginContainer2/VBoxContainer/HBoxContainer/PanelContainer/TutoPage1")
tutoPage_2 = NodePath("MarginContainer2/VBoxContainer/HBoxContainer/PanelContainer/TutoPage2")
clickSound = NodePath("../Click")

[node name="MarginContainer2" type="MarginContainer" parent="TutoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="TutoPanel/MarginContainer2"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="TutoPanel/MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="TutoPanel/MarginContainer2/VBoxContainer/HBoxContainer2"]
light_mask = 0
visibility_layer = 0
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="Label" type="Label" parent="TutoPanel/MarginContainer2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Tutorial"
horizontal_alignment = 1

[node name="ExitTuto" type="Button" parent="TutoPanel/MarginContainer2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
icon = SubResource("AtlasTexture_p5w66")

[node name="HSeparator" type="HSeparator" parent="TutoPanel/MarginContainer2/VBoxContainer"]
visibility_layer = 0
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TutoPanel/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Previous" type="Button" parent="TutoPanel/MarginContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
icon = SubResource("AtlasTexture_ntkxg")

[node name="PanelContainer" type="PanelContainer" parent="TutoPanel/MarginContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TutoPage0" type="TextureRect" parent="TutoPanel/MarginContainer2/VBoxContainer/HBoxContainer/PanelContainer"]
visible = false
layout_mode = 2

[node name="TutoPage1" type="TextureRect" parent="TutoPanel/MarginContainer2/VBoxContainer/HBoxContainer/PanelContainer"]
visible = false
layout_mode = 2

[node name="TutoPage2" type="TextureRect" parent="TutoPanel/MarginContainer2/VBoxContainer/HBoxContainer/PanelContainer"]
visible = false
layout_mode = 2

[node name="Next" type="Button" parent="TutoPanel/MarginContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
icon = SubResource("AtlasTexture_aru18")

[node name="LevelSummary" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(300, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_nq8yg")

[node name="MarginContainer2" type="MarginContainer" parent="LevelSummary"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="LevelSummary/MarginContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="LevelSummary/MarginContainer2/VBoxContainer"]
layout_mode = 2
text = "Well Played !"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="LevelSummary/MarginContainer2/VBoxContainer"]
visibility_layer = 0
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="LevelSummary/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
size_flags_horizontal = 4

[node name="ArrivedMeepleScore" type="HBoxContainer" parent="LevelSummary/MarginContainer2/VBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="LevelSummary/MarginContainer2/VBoxContainer/VBoxContainer2/ArrivedMeepleScore"]
layout_mode = 2
text = "X/X"

[node name="VSeparator" type="VSeparator" parent="LevelSummary/MarginContainer2/VBoxContainer/VBoxContainer2/ArrivedMeepleScore"]
visibility_layer = 0
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="LevelSummary/MarginContainer2/VBoxContainer/VBoxContainer2/ArrivedMeepleScore"]
layout_mode = 2
texture = SubResource("AtlasTexture_cmkyc")

[node name="HSeparator" type="HSeparator" parent="LevelSummary/MarginContainer2/VBoxContainer/VBoxContainer2"]
visibility_layer = 0
layout_mode = 2
size_flags_vertical = 3

[node name="GoneMeepleScore" type="HBoxContainer" parent="LevelSummary/MarginContainer2/VBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="LevelSummary/MarginContainer2/VBoxContainer/VBoxContainer2/GoneMeepleScore"]
layout_mode = 2
text = "X/X"

[node name="VSeparator" type="VSeparator" parent="LevelSummary/MarginContainer2/VBoxContainer/VBoxContainer2/GoneMeepleScore"]
visibility_layer = 0
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="LevelSummary/MarginContainer2/VBoxContainer/VBoxContainer2/GoneMeepleScore"]
layout_mode = 2
texture = SubResource("AtlasTexture_8lvxu")

[node name="HSeparator" type="HSeparator" parent="LevelSummary/MarginContainer2/VBoxContainer"]
visibility_layer = 0
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="LevelSummary/MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="Continue" type="Button" parent="LevelSummary/MarginContainer2/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(80, 30)
layout_mode = 2
size_flags_horizontal = 4
text = "XXXXX"
icon = SubResource("AtlasTexture_6p06c")

[node name="Bip" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_d80sy")
volume_db = -10.0
bus = &"UI FX"

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_6uoe2")
volume_db = -10.0
bus = &"UI FX"

[connection signal="visibility_changed" from="TutoPanel" to="TutoPanel" method="_on_visibility_changed"]
[connection signal="pressed" from="TutoPanel/MarginContainer2/VBoxContainer/HBoxContainer2/ExitTuto" to="TutoPanel" method="_on_exit_tuto_pressed"]
[connection signal="pressed" from="TutoPanel/MarginContainer2/VBoxContainer/HBoxContainer/Previous" to="TutoPanel" method="_on_previous_pressed"]
[connection signal="pressed" from="TutoPanel/MarginContainer2/VBoxContainer/HBoxContainer/Next" to="TutoPanel" method="_on_next_pressed"]
[connection signal="pressed" from="LevelSummary/MarginContainer2/VBoxContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
